2003-12-16  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Allowed backslashes in macro arguments.

2003-12-11  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py: Moved the standard Message class
	into the command-line part, improved GNU compliance.

	* src/info.py, src/cmd_info.py: Improved message display, enhanced
	the parsing of bad box messages.

	* src/graphics.py: Made the "graphics not found" messages into proper
	warnings.

2003-12-08  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Made messages more GNU-compliant.

2003-12-01  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/dvipdfm.py, man/...: Added support for dvipdfm.

	* src/modules/vtex.py, src/modules/graphics.py: Added support for the
	VTeX compiler.

	* src/graphics/...: Let graphics modules check for the availability of
	the converters.

	* src/__init__.py, src/util.py: Moved "prog_available" into "util".

2003-11-10  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Made errors visible even when quiet.

	* src/cmd_pipe.py: Made quietness the default in rubber-pipe.

	* Makefile.in: Made the man pages a dependency for install.

	* src/cmdline.py, src/cmd_info.py, src/cmd_pipe.py: Modified the help
	messages so they conform to GNU conventions.

2003-11-01  Emmanuel Beffara  <manu@beffara.org>

	* man/...: Added documentation for "rubber-pipe".

	* rubber-pipe.in, src/cmd_pipe.py: Added the "rubber-pipe"
	command-line frontend.

	* src/__init__.py, src/modules/dvips.py, src/modules/pdftex.py: Added
	a field "final_file" in the "Environment" class.

2003-10-30  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/beamer.py, man/...: Added a module for package 'beamer'.

	* src/__init__.py: Modified the heuristics for pdfTeX's fake errors.

2003-10-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/util.py: Added support for multi-line macro
	arguments.

	* src/modules/graphics.py: Added a hook for \DeclareGraphicsExtension